tests/neg/02-glob.ts
/*@ [global] glob :: posint */
var glob = 20;

export function zog() {
    glob = -3;
}
